# ASTRA

./: Altitude.sh  CMakeLists.txt  Credentials.txt  Lat.sh  Long.sh  Manual-Select.sh  Monitor.sh  NORAD.sh  Password.sh  README.md  Setup-Menu.sh  Start-Menu.sh  Station.txt  TLE.txt  TLE1.sh  TLE2.sh  Username.sh  main.c  orbitalNumbers.h  orbital_Numbers.h  testing.sh
dialogScripts/: Altitude.sh  Lat.sh  Long.sh  Manual-Select.sh  NORAD.sh  Output.txt  Password.sh  Setup-Menu.sh  Start-Menu.sh  TLE1.sh  TLE2.sh  Username.sh
